--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           fetch-depth: 0
       - uses: actions/setup-go@v2
-      
+        with:
+          go-version: 1.17.0
       - name: run make
         run: make
