--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-and-release:
-    name: Deploy rules to all organisations
+    name: build-and-release
     runs-on: ubuntu-latest
 
     steps:
