--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -20,3 +20,13 @@ jobs:
           go-version: 1.17.5
       - name: run make
         run: make
+      - name: Set env
+        run: echo "VERSION=$(semver get release)" >> $GITHUB_ENV
+      - uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "latest"
+          prerelease: true
+          title: "log4j scanner ${{ VERSION }} "
+          files: |
+            release/*
