--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -29,4 +29,4 @@ jobs:
           prerelease: true
           title: "log4j scanner ${ VERSION }"
           files: |
-            release/*
+            build/*
