--- a/.github/workflows/build-and-release-staging.yml
+++ b/.github/workflows/build-and-release-staging.yml
@@ -19,13 +19,17 @@ jobs:
         run: make
       - name: Set env
         run: echo "VERSION=$(semver get alpha)" >> $GITHUB_ENV
+      - name: Push tag
+        id: tag
+        uses: mathieudutour/github-tag-action@v6.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
       - uses: ncipollo/release-action@v1
         with:
+          name: Release ${{ env.VERSION }} alpha
           artifacts: "release/*"
-          commit: ${{ env.GITHUB_SHA }}
+          tag: ${{ steps.tag.outputs.new_tag }}
           token: ${{ secrets.GITHUB_TOKEN }}
-          tag: ${{ env.GITHUB_SHA }}
-          
       - name: Slack Notification
         uses: rtCamp/action-slack-notify@v2
         env:
