--- a/.github/workflows/build-and-release-staging.yml
+++ b/.github/workflows/build-and-release-staging.yml
@@ -23,13 +23,22 @@ jobs:
         id: tag
         uses: mathieudutour/github-tag-action@v6.0
         with:
+          custom_tag: ${{ env.VERSION }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
-      - uses: ncipollo/release-action@v1
+      - uses: "marvinpinto/action-automatic-releases@latest"
         with:
-          name: Release ${{ env.VERSION }} alpha
-          artifacts: "release/*"
-          tag: ${{ steps.tag.outputs.new_tag }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "${{ env.VERSION }}"
+          prerelease: true
+          title: "log4j scanner ${{ env.VERSION }}"
+          files: |
+            release/*
+      # - uses: ncipollo/release-action@v1
+      #   with:
+      #     name: Release ${{ env.VERSION }}
+      #     artifacts: "release/*"
+      #     tag: ${{ steps.tag.outputs.new_tag }}
+      #     token: ${{ secrets.GITHUB_TOKEN }}
       - name: Slack Notification
         uses: rtCamp/action-slack-notify@v2
         env:
